Add Swagger Basic Implementation
Added basic Swagger document generation. Go to "/swagger" to view base document.
Comments/XML WIP

--- a/PostGradCollabHub/appsettings.json
+++ b/PostGradCollabHub/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "CollabHubDatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "CollabDB"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
