--- a/PostGradCollabHub/PostGradCollabHub.csproj
+++ b/PostGradCollabHub/PostGradCollabHub.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.11" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
