--- a/ReactNetDemo/PostGradCollabReactAspNet.csproj
+++ b/ReactNetDemo/PostGradCollabReactAspNet.csproj
@@ -5,6 +5,7 @@
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'ReactNetDemo' " />
   <ItemGroup>
     <PackageReference Include="JavaScriptEngineSwitcher.Extensions.MsDependencyInjection" Version="3.3.0" />
     <PackageReference Include="JavaScriptEngineSwitcher.V8" Version="3.9.0" />
@@ -14,6 +15,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.11.5" />
     <PackageReference Include="React.AspNet" Version="5.2.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.osx-x64" Version="3.9.1" />
+    <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore" Version="3.9.1" />
   </ItemGroup>
 
 </Project>
