update to try to setup react

--- a/ReactNetDemo/Properties/launchSettings.json
+++ b/ReactNetDemo/Properties/launchSettings.json
@@ -24,6 +24,15 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       }
+    },
+    "React.Sample.Webpack.CoreMvc": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:9457/"
     }
   }
 }
