--- a/ReactNetDemo/PostGradCollabReactAspNet.csproj
+++ b/ReactNetDemo/PostGradCollabReactAspNet.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'ReactNetDemo' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'React.Sample.Webpack.CoreMvc' " />
   <ItemGroup>
     <PackageReference Include="JavaScriptEngineSwitcher.Extensions.MsDependencyInjection" Version="3.3.0" />
     <PackageReference Include="JavaScriptEngineSwitcher.V8" Version="3.9.0" />
@@ -17,6 +18,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.osx-x64" Version="3.9.1" />
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore" Version="3.9.1" />
+    <PackageReference Include="React.Router" Version="5.2.11" />
   </ItemGroup>
 
 </Project>
